# todo_app_actix_web

./: Cargo.toml  README.md  tasks.txt
migrations/: 20251129021329_create_todos.sql  20251129094536_add_data_todos_table.sql
src/: db.rs  main.rs
src/forms/: todo.rs
src/handlers/: todo.rs
src/models/: todo.rs
src/repository/: mod.rs  todo.rs  todo_repo.rs
src/tests/: test_main.rs
static/js/: alert.js
templates/: index.html
