[package]
name = "todo_app_actix_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
actix-files = "0.6"
tera = "1.20"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
